Fixing overflow-x problem

--- a/zerogames/app/Global-Components/Caruso/page.module.css
+++ b/zerogames/app/Global-Components/Caruso/page.module.css
@@ -153,7 +153,7 @@
     display: none;
     flex-direction: column;
     margin-top: 1em;
-    width: 100%;
+    width: 95%;
     height: 100%;
     padding-left: 2em;
 }
