--- a/zerogames/app/Global-Components/CategoryCaruso/page.module.css
+++ b/zerogames/app/Global-Components/CategoryCaruso/page.module.css
@@ -62,7 +62,7 @@
     flex-direction: column;
     margin-top: 1em;
     padding-left: 2em;
-    width: 100%;
+    width: 95%;
     height: 100%;
 }
 
